--- a/LessPaper.Shared.MinIO/LessPaper.Shared.MinIO.csproj
+++ b/LessPaper.Shared.MinIO/LessPaper.Shared.MinIO.csproj
@@ -3,9 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>LessPaper</Authors>
+    <PackageProjectUrl>https://github.com/LessPaperWork/LessPaper.Shared.MinIO</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="2.8.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="LessPaper.Shared" Version="0.0.8" />
     <PackageReference Include="Minio" Version="3.1.10" />
     <PackageReference Include="System.Memory" Version="4.5.4" />
